--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ seaborn==0.12.2
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+streamlit-plotly-events==0.0.6
 sympy==1.11.1
 tenacity==8.2.2
 tensorboard-plugin-wit==1.8.1
